--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,10 +1,17 @@
 test:
-  service: Disk
-  root: <%= Rails.root.join("tmp/storage") %>
+ service: Disk
+ root: <%= Rails.root.join("tmp/storage") %>
 
 local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+ service: Disk
+ root: <%= Rails.root.join("storage") %>
+
+amazon:
+ service: S3
+ region: ap-northeast-1
+ bucket: furima38596
+ access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+ secret_access_key:  <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
