--- a/config/database.yml
+++ b/config/database.yml
@@ -57,8 +57,8 @@ test:
 #
 production:
   <<: *default
-  adapter: postgresql
-  url: <%= ENV['DATABASE_URL'] %>
-  database: furima_38596_production
-  username: furima_38596
-  password: <%= ENV['FURIMA_38596_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  database: furima-38596_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
